[gd_scene load_steps=20 format=3 uid="uid://deve4aviylmh6"]

[ext_resource type="Script" path="res://main.gd" id="1_i2qk7"]
[ext_resource type="Texture2D" uid="uid://gpdtbyjf5s0a" path="res://1px.png" id="2_vdmwx"]
[ext_resource type="Texture2D" uid="uid://c43pmxei3wg8o" path="res://1x/Asset 5.png" id="5_5x372"]
[ext_resource type="Shader" path="res://draw_gi.gdshader" id="5_ni6dk"]
[ext_resource type="Shader" path="res://gi.gdshader" id="5_oymd0"]
[ext_resource type="Shader" path="res://last_frame_buffer.gdshader" id="6_8rd41"]
[ext_resource type="FontFile" uid="uid://pekwxkn6c024" path="res://fff-forward.regular.ttf" id="6_cg0vq"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_34mb1"]
resource_local_to_scene = true

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_3ypmn"]
blend_mode = 4
light_mode = 2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_u3ema"]
shader = ExtResource("5_ni6dk")
shader_parameter/u_sRGB = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rh0f5"]
shader = ExtResource("6_8rd41")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8tkk2"]
bg_color = Color(0, 0, 0, 0.498039)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.301961, 0.207843, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0utbb"]
bg_color = Color(0.85098, 0.611765, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sw8da"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e83pn"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dqkwp"]
texture = ExtResource("5_5x372")
margin_top = 1.0
axis_stretch_vertical = 1
region_rect = Rect2(0, 0, 32, 11)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_xipw4"]
noise_type = 0
frequency = 1.0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_trggk"]
width = 320
height = 180
generate_mipmaps = false
noise = SubResource("FastNoiseLite_xipw4")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cv5u4"]
shader = ExtResource("5_oymd0")
shader_parameter/u_bounce = true
shader_parameter/u_bounciness = 0.8
shader_parameter/u_denoise = true
shader_parameter/u_dir_light_multi = 5.0
shader_parameter/u_dir_light_thin = 5.0
shader_parameter/u_emission_dropoff = 4.0
shader_parameter/u_emission_multi = 3.0
shader_parameter/u_emission_range = 1000.0
shader_parameter/u_max_raymarch_steps = 32
shader_parameter/u_noise_data = SubResource("NoiseTexture2D_trggk")
shader_parameter/u_rays_per_pixel = 80.0

[node name="Main" type="Node2D"]
material = SubResource("CanvasItemMaterial_34mb1")
script = ExtResource("1_i2qk7")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="MainViewport" type="SubViewport" parent="CanvasLayer/SubViewportContainer"]
unique_name_in_owner = true
transparent_bg = true
handle_input_locally = false
audio_listener_enable_2d = true
canvas_cull_mask = 4294967271
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="Bg" type="Sprite2D" parent="CanvasLayer/SubViewportContainer/MainViewport"]
visible = false
modulate = Color(0.227451, 0.156863, 0.156863, 1)
visibility_layer = 17
z_index = -10
material = SubResource("CanvasItemMaterial_3ypmn")
position = Vector2(392, 523)
scale = Vector2(5000, 5000)
texture = ExtResource("2_vdmwx")

[node name="Bg2" type="Sprite2D" parent="CanvasLayer/SubViewportContainer/MainViewport"]
modulate = Color(0.407843, 0.305882, 0.309804, 1)
z_index = -9
position = Vector2(392, 523)
scale = Vector2(5000, 5000)
texture = ExtResource("2_vdmwx")

[node name="DrawGI" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
z_index = 50
material = SubResource("ShaderMaterial_u3ema")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="SubViewportContainer2" type="SubViewportContainer" parent="CanvasLayer"]
visible = false
z_index = 100
offset_right = 40.0
offset_bottom = 40.0

[node name="LastFrameBufferViewport" type="SubViewport" parent="."]
unique_name_in_owner = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(320, 180)
render_target_update_mode = 4

[node name="CanvasLayer" type="CanvasLayer" parent="LastFrameBufferViewport"]

[node name="LastFrameBuffer" type="ColorRect" parent="LastFrameBufferViewport/CanvasLayer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_rh0f5")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="HUD" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 2

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="SettingsButton" type="Button" parent="HUD/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_pressed = true
text = "x"

[node name="Settings" type="VBoxContainer" parent="HUD/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="ReloadButton" type="Button" parent="HUD/MarginContainer/VBoxContainer/Settings"]
layout_mode = 2
focus_mode = 0
text = "Reload Level"

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/MarginContainer/VBoxContainer/Settings"]
layout_mode = 2

[node name="Label" type="Label" parent="HUD/MarginContainer/VBoxContainer/Settings/HBoxContainer"]
layout_mode = 2
text = "Graphics Quality :"

[node name="GFXSlider" type="HSlider" parent="HUD/MarginContainer/VBoxContainer/Settings/HBoxContainer"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
focus_mode = 0
min_value = 8.0
max_value = 128.0
value = 80.0

[node name="HBoxContainer2" type="HBoxContainer" parent="HUD/MarginContainer/VBoxContainer/Settings"]
layout_mode = 2

[node name="Label" type="Label" parent="HUD/MarginContainer/VBoxContainer/Settings/HBoxContainer2"]
layout_mode = 2
text = "Resolution:"

[node name="Resolution" type="ItemList" parent="HUD/MarginContainer/VBoxContainer/Settings/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
focus_mode = 0
auto_height = true
item_count = 3
max_columns = 3
same_column_width = true
fixed_column_width = 50
item_0/text = "Low"
item_1/text = "Mid"
item_2/text = "High"

[node name="FPS" type="Label" parent="HUD/MarginContainer/VBoxContainer/Settings"]
unique_name_in_owner = true
layout_mode = 2
text = "asdfds"

[node name="HBoxContainer" type="HBoxContainer" parent="HUD"]
offset_left = 10.0
offset_top = 510.0
offset_right = 40.0
offset_bottom = 710.0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="Battery" type="ProgressBar" parent="HUD/HBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.372549)
custom_minimum_size = Vector2(30, 200)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/outline_size = 1
theme_override_styles/background = SubResource("StyleBoxFlat_8tkk2")
theme_override_styles/fill = SubResource("StyleBoxFlat_0utbb")
max_value = 1.0
step = 0.0
value = 0.7
fill_mode = 3
show_percentage = false

[node name="VSeparator" type="VSeparator" parent="HUD/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxEmpty_sw8da")

[node name="Flares" type="ProgressBar" parent="HUD/HBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.372549)
custom_minimum_size = Vector2(30, 200)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/outline_size = 1
theme_override_styles/background = SubResource("StyleBoxEmpty_e83pn")
theme_override_styles/fill = SubResource("StyleBoxTexture_dqkwp")
max_value = 20.0
step = 1.0
value = 5.0
fill_mode = 3
show_percentage = false

[node name="Text" type="RichTextLabel" parent="HUD"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.752941)
clip_contents = false
offset_left = 271.0
offset_top = 511.0
offset_right = 1009.0
offset_bottom = 707.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.372549)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_outline_size = -4
theme_override_fonts/normal_font = ExtResource("6_cg0vq")
theme_override_font_sizes/normal_font_size = 38
bbcode_enabled = true
text = "[fade start=4 length=14]sdfgsdfsdfsdfsdfsdfsdfsdf[/fade]"

[node name="GIViewport" type="SubViewport" parent="."]
unique_name_in_owner = true
transparent_bg = true
handle_input_locally = false
canvas_cull_mask = 4294935520
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="CanvasLayer" type="CanvasLayer" parent="GIViewport"]

[node name="GI" type="ColorRect" parent="GIViewport/CanvasLayer"]
unique_name_in_owner = true
visibility_layer = 33
material = SubResource("ShaderMaterial_cv5u4")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Emissive" type="SubViewport" parent="."]
unique_name_in_owner = true
handle_input_locally = false
canvas_cull_mask = 4293918736
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="Bg" type="Sprite2D" parent="Emissive"]
modulate = Color(0.0313726, 0.0313726, 0.0313726, 1)
visibility_layer = 16
z_index = -8
material = SubResource("CanvasItemMaterial_3ypmn")
position = Vector2(392, 523)
scale = Vector2(5000, 5000)
texture = ExtResource("2_vdmwx")

[connection signal="toggled" from="HUD/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_toggled"]
[connection signal="pressed" from="HUD/MarginContainer/VBoxContainer/Settings/ReloadButton" to="." method="_on_reload_button_pressed"]
[connection signal="value_changed" from="HUD/MarginContainer/VBoxContainer/Settings/HBoxContainer/GFXSlider" to="." method="_on_gfx_slider_value_changed"]
[connection signal="item_selected" from="HUD/MarginContainer/VBoxContainer/Settings/HBoxContainer2/Resolution" to="." method="_on_resolution_item_selected"]
